# mlmail

./: .cspell.json  .gitignore  .jscpd.json  .markdownlint-cli2.jsonc  .n-cursor.json  .n-minify-image.tsv  .oxlintrc.json  .stylelintignore  .trufflehog-exclude  .v8rignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COVERAGE.md  README.md  eslint.config.js  eslint.config.mjs  knip.json  package.json
.claude/: launch.json  settings.json  settings.local.json
.claude/commands/: n-check.md  n-coverage-fix.md  n-fix-tests.md
.claude/hooks/: .normalize-state  capture-decisions.sh  normalize-decisions.sh
.cursor/rules/: n-adr.mdc  n-bun.mdc  n-changelog.mdc  n-ci4.mdc  n-doc-files.mdc  n-ga.mdc  n-image-avif.mdc  n-image-compress.mdc  n-js-lint.mdc  n-js-run.mdc  n-js.mdc  n-rust.mdc  n-security.mdc  n-style-lint.mdc  n-style.mdc  n-tauri.mdc  n-test.mdc  n-text.mdc  n-vue.mdc
.github/workflows/: git-ai.yml  lint-ga.yml  lint-js.yml  lint-repo.yml  lint-rust.yml  lint-style.yml  lint-text.yml  release.yml
app/: CHANGELOG.md  index.html  package.json  stryker-vue-macros-ignorer.mjs  stryker.config.mjs  vite.config.js  vitest.config.mjs
app/.changes/: 260626-1548.md  260626-1613.md  260703-0750-2.md  260703-0750-3.md  260703-0750-4.md  260703-0750.md  260703-1734.md  260703-1758.md  260705-1835.md  260706-1128.md  260706-2130.md  260711-0705.md  260711-1130.md  260711-2055.md  260712-1758.md  260712-1846.md  260712-1901.md  260712-1903.md  260712-2044-2.md  260712-2044-3.md  260712-2044.md  260719-2045.md  260722-1456.md  260723-0932.md  260723-0942.md  260724-1518.md
app/src/: App.test.js  App.vue  main.js  omlx.js
app/src-tauri/: .env  .env.example  .env.secret.example  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/.cargo/: mutants.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/docs/: build.md
app/src-tauri/icons/: icon.icns
app/src-tauri/icons/src/: icon-manifest.json
app/src-tauri/resources/newsletter-templates/: hackernoon.json  tldr.json
app/src-tauri/src/: call_analysis.rs  endpoints.rs  lib.rs  main.rs  newsletter_template.rs  omlx.rs
app/src-tauri/src/auth/: config.rs  error.rs  id_token.rs  mod.rs  pkce.rs  state.rs  token_exchange.rs
app/src-tauri/src/auth/docs/: config.md  error.md  id_token.md  index.md  mod.md  pkce.md  state.md  token_exchange.md
app/src-tauri/src/auth/flow/: android.rs  macos.rs  mod.rs
app/src-tauri/src/auth/flow/docs/: android.md  index.md  macos.md  mod.md
app/src-tauri/src/auth/storage/: android.rs  file.rs  in_memory.rs  macos.rs  mod.rs
app/src-tauri/src/auth/storage/docs/: android.md  file.md  in_memory.md  index.md  mod.md
app/src-tauri/src/docs/: call_analysis.md  endpoints.md  index.md
app/src-tauri/src/gmail/: error.rs  message.rs  mod.rs
app/src-tauri/tests/: acquire_access_token.rs  auth_commands.rs  auth_finalize_login.rs  auth_logout.rs  gmail_commands.rs
app/test/: happy-dom.preload.js
docs/: android-release-keystore.md  tauri-mcp-plan.md
docs/ci4/: 01-context.md  04-code.md  (+5 more)
scripts/: CHANGELOG.md  coverage.js  docs-regen.js  docs-regen.mjs  package.json  with-lock.js
src-tauri/: Cargo.toml
(+337 files in other folders)
