[package]
name = "mlmail"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mlmail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["net", "io-util", "time", "macros", "rt", "sync"] }
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
log = "0.4"
thiserror = "2"
dotenvy = "0.15.7"
regex = "1"
html-escape = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tauri = { version = "2", features = ["test"] }
